WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
192319
Swipe snapshot stays up too long swiping around on apple.com (waiting for first paint)
https://bugs.webkit.org/show_bug.cgi?id=192319
Summary
Swipe snapshot stays up too long swiping around on apple.com (waiting for fir...
Tim Horton
Reported
2018-12-03 13:06:36 PST
Swipe snapshot stays up too long swiping around on apple.com (waiting for first paint)
Attachments
Patch
(4.83 KB, patch)
2018-12-03 13:06 PST
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2018-12-03 13:06:56 PST
Created
attachment 356396
[details]
Patch
Tim Horton
Comment 2
2018-12-03 13:06:58 PST
<
rdar://problem/45928708
>
WebKit Commit Bot
Comment 3
2018-12-03 13:41:35 PST
Comment on
attachment 356396
[details]
Patch Clearing flags on attachment: 356396 Committed
r238818
: <
https://trac.webkit.org/changeset/238818
>
WebKit Commit Bot
Comment 4
2018-12-03 13:41:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug